--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/FrankMerema/resume/issues"
   },
-  "homepage": "https://github.com/FrankMerema/resume#readme"
+  "homepage": "https://github.com/FrankMerema/resume#readme",
+  "dependencies": {
+    "chalk": "^2.4.2",
+    "inquirer": "^6.2.2"
+  }
 }
