--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@frankmerema/resume",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "My very own resume",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "bin": {
+    "@frankmerema/resume": "./index.js"
   },
   "repository": {
     "type": "git",
